# CPP

Assignment 1/ex1/: CMakeLists.txt  Date.cpp  main.cpp
Assignment 1/ex2/: CMakeLists.txt  ReadWords.cpp  ReadWordsBar.cpp  ReadWordsBar.h  ex2.cpp
Assignment 2/ex1/: CMakeLists.txt  Student.cpp  Student.h  ex1.cpp  main.cpp
Assignment 2/ex2/: CMakeLists.txt  ReadFilteredWords.cpp  ReadFilteredWords.h  ReadWords.cpp  filter1.cpp  filter1.h  filter2.cpp  filter2.h  filter3.cpp  filter3.h  main.cpp
